# Learn_Cmake

single_excute/: CMakeLists.txt  main.cpp
single_excute/print/inc/: print.h
single_excute/print/src/: print.cpp
static_shared_lib/: CMakeLists.txt  main.cpp
static_shared_lib/shared_lib/: CMakeLists.txt
static_shared_lib/shared_lib/inc/: shared_lib.h
static_shared_lib/shared_lib/src/: shared_lib.cpp
static_shared_lib/static_lib/: CMakeLists.txt
static_shared_lib/static_lib/inc/: static_lib.h
static_shared_lib/static_lib/src/: static_lib.cpp
